--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 body {
     background-color: #9ca3af;
+    color: #0f172a;
     font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    margin: 0;
+    padding: 0;
 }
 
 .wrapper
@@ -17,4 +20,21 @@ body {
     margin: 0 auto;
     text-align: center;
     padding: 2.5rem;
+}
+
+.btn
+{
+    color: #0f172a;
+    border: 1px solid #4ade80;
+    padding: 0.75rem;
+    border-radius: 4px;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 1rem;
+}
+
+.btn:hover,
+.btn:focus
+{
+    background-color: #e5e7eb;
 }
